# realworld-egui-seaorm

./: .env  .gitignore  Architecture.md  Cargo.toml  Final_Report.md  Installation.md  LICENSE  Readme.md  notes.txt  speicification.md
.github/workflows/: rust.yml
command-bus/: Cargo.toml
command-bus/src/: lib.rs
core/: Cargo.toml
core/src/: api.rs  dto.rs  entities.rs  lib.rs
core/src/article_favorites/: api.rs  dto.rs
core/src/article_tags/: api.rs  dto.rs
core/src/articles/: api.rs  dto.rs
core/src/comments/: api.rs  dto.rs
core/src/tags/: api.rs  dto.rs  mod.rs
core/src/user_follows/: api.rs  dto.rs
core/src/users/: api.rs  dto.rs
docu_res/: architecture_types.mmd  er_diagramm.mmd  module_dependencies.mmd
fatclient/: Cargo.toml
fatclient/src/: main.rs
migration/: Cargo.toml  README.md
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20260429_091057_user_add_admin_flag.rs  m20260504_202226_add_compound_keys.rs  main.rs
models/: Cargo.toml
models/src/: lib.rs
models/src/entity/: article_favorites.rs  article_tags.rs  articles.rs  comments.rs  mod.rs  prelude.rs  tags.rs  user_follows.rs  users.rs
quic-client/: Cargo.toml
quic-client/src/: main.rs
quic-server/: Cargo.toml
quic-server/src/: common.rs  main.rs
server-core/: Cargo.toml
server-core/src/: lib.rs  token.rs
ui/: Cargo.toml
ui/src/: api.rs  app.rs  lib.rs
ui/src/ui/: login.rs  mod.rs  register.rs  utils.rs
ui/src/ui/article_favorites/: tables.rs
ui/src/ui/article_tags/: tables.rs
ui/src/ui/articles/: forms.rs  mod.rs  pages.rs  tables.rs  tabs.rs
ui/src/ui/comments/: forms.rs  mod.rs  tables.rs
ui/src/ui/core/: mod.rs  page.rs  symbols.rs  tables.rs
ui/src/ui/tags/: forms.rs  mod.rs  pages.rs  tables.rs
ui/src/ui/user_follows/: tables.rs
ui/src/ui/users/: forms.rs  mod.rs  pages.rs  tables.rs  tabs.rs
web-client/: Cargo.toml  index.html
web-client/src/: main.rs
web-server/: Cargo.toml
web-server/src/: main.rs
