[package]
name = "fatclient"
version = "0.1.0"
edition = "2024"

[dependencies]
server-core = { path="../server-core" }
core = { path="../core" }
ui = { path="../ui" }
command-bus = { path="../command-bus" }
models = { path="../models" }
eframe = "0.33.3"
egui = "0.33.3"
egui_extras = "0.33.3"
tokio =  { version = "1.50.0", features=["full"] }
sea-orm = { version = "2.0.0-rc", features = [ "sqlx-postgres", "runtime-tokio-native-tls", "macros" ] }