[package]
name = "quic-client"
version = "0.1.0"
edition = "2024"

[dependencies]
quinn = "0.11.9"
tokio = { version= "1.50.0", features = ["full"] }
tracing = { version = "0.1.10", default-features = false, features = ["std"] }
tracing-futures = { version = "0.2.0", default-features = false, features = ["std-future"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1.0.22"
rustls = { version = "0.23.5", default-features = false, features = ["std"] }
rcgen = "0.14"
tracing-subscriber = { version = "0.3.0", default-features = false, features = ["env-filter", "fmt", "ansi", "time", "local-time"] }
directories-next = "2"
proto = { package = "quinn-proto", version = "0.11.14", default-features = false }
url = "2"