[package]
name = "server-core"
version = "0.1.0"
edition = "2024"

[dependencies]
core = { path="../core" }
command-bus = { path="../command-bus" }
models = { path="../models" }
sea-orm = { version = "2.0.0-rc", features = [ "sqlx-postgres", "runtime-tokio-native-tls", "macros" ] }
tokio =  { version = "1.50.0", features=["full"] }
