[package]
name = "server-core"
version = "0.1.0"
edition = "2024"

[dependencies]
core = { path="../core" }
command-bus = { path="../command-bus" }
models = { path="../models" }
sea-orm = { version = "2.0.0-rc", features = [ "sqlx-postgres", "runtime-tokio-native-tls", "macros" ] }
tokio =  { version = "1.50.0", features=["full"] }
hmac = "0.13.0"
sha2 = "0.11.0"
hex = "0.4.3"

[dev-dependencies]
serde = { version= "1.0.228", features = ["derive"] }
postcard = { version="1.1.3", features = ["use-std"] }