[package]
name = "web-client"
version = "0.1.0"
edition = "2024"

[dependencies]
app-core = { package="core", path="../core" }
command-bus = { path="../command-bus" }
ui = { path="../ui" }
eframe = { version="0.33.3"}
egui = "0.33.3"
egui_extras = "0.33.3"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["UrlSearchParams", "Window", "Location"] }
poll-promise = { version = "0.3", features = ["web"] }
getrandom = { version = "0.3.4", features = ["wasm_js"] }
uuid = { version = "1.22.0", features = ["v4","js"] }
reqwest = {version="0.12.12", features = ["blocking"]}
postcard = { version="1.1.3", features = ["use-std"] }