[package]
name = "web-server"
version = "0.1.0"
edition = "2024"

[dependencies]
app-core = { package="core", path="../core" }
server-core = { path="../server-core" }
axum = "0.8.8"
command-bus = { path="../command-bus" }
tokio = { version= "1.50.0", features = ["full"] }
postcard = { version="1.1.3", features = ["use-std"] }
sea-orm = { version = "2.0.0-rc", features = [ "sqlx-postgres", "runtime-tokio-native-tls", "macros" ] }
tower-http = { version="0.6.8", features = ["cors","fs"]}
dotenvy = "0.15.7"
rust-argon2 = "3.0.0"
base64 = "0.22.1"
